--- a/4. JS Front-End/HTML & CSS/1. Introduction to HTML & CSS/16.Combinators.html
+++ b/4. JS Front-End/HTML & CSS/1. Introduction to HTML & CSS/16.Combinators.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 16</title>
+    <link rel="stylesheet" href="styles16.css">
 </head>
 <body>
     <div>
