--- a/4. JS Front-End/HTML & CSS/3. CSS Box Model and Typography/1.BoxModelDisplay.html
+++ b/4. JS Front-End/HTML & CSS/3. CSS Box Model and Typography/1.BoxModelDisplay.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1</title>
+    <link rel="stylesheet" href="1.styles.css">
 </head>
 <body>
     
