updated 3.CSS Box Model and Typography - Task 3

--- a/4. JS Front-End/HTML & CSS/3. CSS Box Model and Typography/3.BoxModelMargin.html
+++ b/4. JS Front-End/HTML & CSS/3. CSS Box Model and Typography/3.BoxModelMargin.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="negative">
-        <p>Negative Margin: -20px</p>
+        <p>Negative Top Margin: -20px</p>
     </div>
 
 </body>
